fix: toc collapse when section has href

--- a/src/components/TocItem/TocItem.scss
+++ b/src/components/TocItem/TocItem.scss
@@ -17,33 +17,51 @@ $visibleStartPadding: 12px;
         @include focusable(-2px); // -2px, as outline on focues goes out of toc's borders
     }
 
+    &__wrapper {
+        display: flex;
+        align-items: center;
+
+        padding: 7px 0px 5px;
+    }
+
+    &__text-block {
+        display: block;
+
+        position: relative;
+        padding: 7px 12px 7px 20px;
+        width: 100%;
+
+        @media (max-width: map-get($screenBreakpoints, 'md') - 1) {
+            padding: 10px 12px 10px (28px + $visibleStartPadding);
+
+            [dir='rtl'] & {
+                padding: 10px (28px + $visibleStartPadding) 10px 12px;
+            }
+        }
+
+        [dir='rtl'] & {
+            padding: 7px 20px 7px 12px;
+        }
+    }
+
     &__text {
         --g-focus-border-radius: 4px;
 
-        display: block;
         font-family: inherit;
         font-size: inherit;
         font-weight: inherit;
 
-        position: relative;
-        padding: 7px 12px 7px 20px;
         box-sizing: border-box;
         word-break: break-word;
         background-color: transparent;
         border: 0;
         text-align: initial;
-        width: 100%;
         border-radius: var(--g-focus-border-radius);
 
         color: var(--g-color-text-primary);
 
         @media (max-width: map-get($screenBreakpoints, 'md') - 1) {
             @include text-size(body-2);
-            padding: 10px 12px 10px (28px + $visibleStartPadding);
-        }
-
-        [dir='rtl'] & {
-            padding: 10px (28px + $visibleStartPadding) 10px 12px;
         }
 
         &_active {
@@ -67,16 +85,6 @@ $visibleStartPadding: 12px;
             }
         }
 
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            right: 0;
-            // hack: to be shure that it will always start from the left of the TOC
-            left: -100vw;
-            height: 100%;
-        }
-
         @include focusable(-2px); // -2px, as outline on focues goes out of toc's borders
     }
 
@@ -94,6 +102,20 @@ $visibleStartPadding: 12px;
             [dir='rtl'] & {
                 right: $visibleStartPadding;
             }
+        }
+    }
+
+    &__arrow {
+        @media (max-width: map-get($screenBreakpoints, 'md') - 1) {
+            margin-right: 20px;
+
+            [dir='rtl'] & {
+                margin-left: 20px;
+            }
+        }
+
+        &:hover:before {
+            background: none;
         }
     }
 }
